correction in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 title: Udacity Google India Scholarship program
-desc: List of projects created as part of Udacity Android Basics course
+description: List of projects created as part of Udacity Android Basics course
 plugins:
   - jemoji
 github:
